# boki

./: .editorconfig  .gitignore  LICENSE  README.md  com.github.kinten108101.Boki.json  jsconfig.json  meson.build  meson_options.txt  package.json
data/: app.desktop  app.service  gresources.data.xml  gresources.gschema.xml  gresources.metainfo.xml  meson.build  style.css
data/gtk/src/: help-overlay.blp
data/icons/: meson.build
data/tracker/: app.description  app.ontology  meson.build
data/ui/src/: help-overlay.blp  history-row.blp  preferences.blp  window.blp
po/: POTFILES  meson.build  vi.po
scripts/: flatpak-install.sh  flatpak-run.sh  meson-install.sh  meson-run.sh  ui-compile.sh
src/: about.js  application.js  gresources.src.xml  index.js  main.js  meson.build  window.js
src/actions/: copy-text.js  file.js
src/lib/: builder.js  copy-text.js  dynamic-toaster.js  file.js  forward-methods.js  functional.js  generic-shortcuts-factory.js  generic-shortcuts.js  gtk.js  message.js  pjxml.js  stvpk-shortcut-label.js  toaster-provider.js  tracker-functional.js  tracker.js  window-promiser.js
src/services/: database.js  download.js  history.js  steamworks.js  toaster.js
src/utils/: error.js  files.js  markup.js  model.js  settings.js  string.js
src/widgets/: about-page.js  about-win.js  about.js  new_from_appdata.js  pref-page.js  pref-win.js  pref.js  shortcuts-page.js  shortcuts.js  spinning-button.js  swipe-tracker.js
src/widgets/playground/: index.js  page.js
tests/: smoke-test.py  testutil.py
