configure_file(
	input: 'app.ontology',
	output: 'com.github.kinten108101.Boki.ontology',
	copy: true,
	install_dir: get_option('prefix') / get_option('datadir') / 'com.github.kinten108101.Boki' / 'ontology',
)

configure_file(
	input: 'app.description',
	output: 'com.github.kinten108101.Boki.description',
	copy: true,
	install_dir: get_option('prefix') / get_option('datadir') / 'com.github.kinten108101.Boki' / 'ontology',
)
